🛠️ refactor: major restructure of code
